--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wingman",
-  "version": "1.1.1",
+  "name": "@azinasili/wingman",
+  "version": "1.1.2",
   "description": "Wingman, the popup window manager.",
   "homepage": "https://github.com/azinasili/wingman",
   "author": "Azin Asili <hello@azinasili.com> (azinasili.com)",
